menu bug fix z-index

--- a/css/index.css
+++ b/css/index.css
@@ -1382,7 +1382,7 @@ footer a:hover {
       top: 20px;
       height: 35px;
       width: 35px;
-      z-index: 12;
+      z-index: 10000;
     }
 
     /* Icon Bars */
